--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
 	<div class="header-content-wrap">
-		<h1><a href="#0">Web Design Company</a></h1>
+		<h1>Web Design Company</h1>
 		<button class="btn-menu">Menu</button>
 		<nav>
 			<ul>
